--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "dev": "ts-node-dev --transpile-only --ignore-watch node_modules src/server.ts",
     "typeorm": "ts-node-dev node_modules/typeorm/cli.js",
-    "test": "NODE_ENV=test jest",
-    "posttest": "rm ./src/database/database.test.sqlite"
+    "test": "NODE_ENV=test jest -i",
   },
   "dependencies": {
     "@types/nodemailer": "^6.4.0",
@@ -17,7 +16,8 @@
     "nodemailer": "^6.4.18",
     "reflect-metadata": "^0.1.13",
     "sqlite3": "^5.0.2",
-    "typeorm": "^0.2.31"
+    "typeorm": "^0.2.31",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
